--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.55.0",
     "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@imagekit/react": "^5.0.1",
     "react": "19.0.0-rc-8b08e99e-20240713",
     "react-dom": "19.0.0-rc-8b08e99e-20240713",
